# iam-analyzer

./: .gitignore  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/cloudtrail/: developer-events.json
samples/policies/: developer-broad-policy.json
src/iam_lpa/: __init__.py  analyzer.py  cli.py  cloudtrail.py  formatter.py  models.py  policy.py  risk.py
tests/: test_analyzer.py  test_cli.py
